hphp/hack/test/typecheck/reactive/rx_if_implements36.php.exp
File "rx_if_implements36.php", line 15, characters 19-19:
Member f has the wrong type (Typing[4341])
File "rx_if_implements36.php", line 9, characters 19-19:
This function is conditionally reactive (condition type: \Rx).
File "rx_if_implements36.php", line 15, characters 19-19:
This function is non-reactive.
